tests/NormalTests/paczka2/big_fuzzy/17662012.err
Error in line 1: 9HQ S315 16,4
Error in line 2: 9HQ S969 877,5
Error in line 4: S4 S969 81,4
Error in line 7: vBMAR7Tt2g6 S315 72,53
Error in line 10: S4 S969 30,1
Error in line 12: S4 S4 84,7
Error in line 13: S4 S4 41,5
Error in line 17: S4 S4 24,9
Error in line 16: rbjqvP S315 87,0
Error in line 20: rbjqvP S382 84,1
Error in line 28: S4 S315 92,0
Error in line 24: 9HQ S969 17,7
Error in line 9: vBMAR7Tt2g6 S315 298,6
Error in line 33: e9WoHbn0vuBS38279,2
Error in line 37: S4 S969 58,9
Error in line 38: S4 S969 80,1
Error in line 25: mj9sncI1OR S969 49,9
Error in line 54: S4 S969 48,5
Error in line 55: S4 S4 68,5
Error in line 60: S4 S4 288,4
Error in line 56: Vm1IdG15 S382 36,4
Error in line 69: Vm1IdG15 S315 26,5
Error in line 66: rbjqvP S4 56,1
Error in line 76: vBMAR7Tt2g6 S382 448,4
Error in line 80: vBMAR7Tt2g6 S969 26,9
Error in line 92: S4 S4 91,6
Error in line 98: S4 S4 76,8
Error in line 102: S4 S4 9,4
Error in line 108: S4 S4 8,7
Error in line 110: mj9sncI1OR S4 37,66
Error in line 112: S4 S4 51,7
Error in line 106: mj9sncI1OR S4 12,8
Error in line 117: S4 S4 190,3
Error in line 118: vBMAR7Tt2g6 S4 85,1
Error in line 95: 9HQ S315 61,4
Error in line 124: vBMAR7Tt2g6 S969 -3,6
Error in line 120: rbjqvP S4 65,6
Error in line 131: S4 S315 2,9
Error in line 132: e9WoHbn0vuB S4 63,7
Error in line 136: S4 S315 1,0
Error in line 141: S4 S382 73,7
Error in line 147: S4 S382 340,5
Error in line 163: 9HQ S969 94,8
Error in line 169: S4 S382 50,1
Error in line 179: rbjqv; S382 2,9
Error in line 157: Vm1IdG15 S4 41,4
Error in line 180: vBMAR7Tt2g6 S969 66,7
Error in line 176: rbjqvP S382 0,6
Error in line 188: S4 S382 74,1
Error in line 184: vBMAR7Tt2g6 S382 924,1
Error in line 191: vBMAR7Tt2g6 S969 48,8
Error in line 192: vBMAR7Tt2g6 S315 55,6
Error in line 194: e9WoHbn0vuB S382 84,4
Error in line 190: rbjqvP S4 52,9
Error in line 200: S4 S382 2,6
Error in line 193: vBMAR7Tt2g6 S4 25,0
Error in line 199: Vm1IdG15 S4 41,9
Error in line 207: Vm1IdG15 S315 84,7
Error in line 211: S4 S315 20,3
Error in line 210: rbjqvP S382 98,5
Error in line 220: S4 S969 19,7
Error in line 221: S4 S969 35,3
Error in line 222: S4 S4 91,2
Error in line 223: mj9sncI1OR S315 2,8
Error in line 227: Vm1IdG15 S315 73,90
Error in line 228: S4 S4 300,0
Error in line 230: mj9sncI1OR S4 151,0
Error in line 217: Vm1IdG15 S969 84,6
Error in line 236: S4 S969 86,1
Error in line 242: S4 S4 85,4
Error in line 234: rbjqvP S969 62,9
Error in line 246: S4 S4 409,9
Error in line 247: vBMAR7Tt2g6 S315 29,8
Error in line 248: vBMAR7Tt2g6 S382 31,7
